testsuite/tests/module/T12026.hs
module T12026 where

import Prelude (map ())
